--- a/lox/lox.vcxproj.filters
+++ b/lox/lox.vcxproj.filters
@@ -65,5 +65,8 @@
     <ClInclude Include="scanner.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="object.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
