--- a/lox/lox.vcxproj
+++ b/lox/lox.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="debug.c" />
     <ClCompile Include="main.c" />
     <ClCompile Include="memory.c" />
+    <ClCompile Include="object.c" />
     <ClCompile Include="scanner.c" />
     <ClCompile Include="value.c" />
     <ClCompile Include="vm.c" />
