--- a/lox/lox.vcxproj.filters
+++ b/lox/lox.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="scanner.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="object.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.h">
