added natives.c and natives.h to config

--- a/lox/lox.vcxproj
+++ b/lox/lox.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="debug.c" />
     <ClCompile Include="main.c" />
     <ClCompile Include="memory.c" />
+    <ClCompile Include="natives.c" />
     <ClCompile Include="object.c" />
     <ClCompile Include="scanner.c" />
     <ClCompile Include="table.c" />
@@ -155,6 +156,7 @@
     <ClInclude Include="compiler.h" />
     <ClInclude Include="debug.h" />
     <ClInclude Include="memory.h" />
+    <ClInclude Include="natives.h" />
     <ClInclude Include="object.h" />
     <ClInclude Include="scanner.h" />
     <ClInclude Include="table.h" />
