--- a/lox/lox.vcxproj.filters
+++ b/lox/lox.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="table.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="natives.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.h">
@@ -75,6 +78,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="table.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="natives.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
