add ryu library

--- a/lox/lox.vcxproj
+++ b/lox/lox.vcxproj
@@ -145,6 +145,8 @@
     <ClCompile Include="memory.c" />
     <ClCompile Include="natives.c" />
     <ClCompile Include="object.c" />
+    <ClCompile Include="ryu\d2fixed.c" />
+    <ClCompile Include="ryu\d2s.c" />
     <ClCompile Include="scanner.c" />
     <ClCompile Include="table.c" />
     <ClCompile Include="value.c" />
@@ -158,6 +160,13 @@
     <ClInclude Include="memory.h" />
     <ClInclude Include="natives.h" />
     <ClInclude Include="object.h" />
+    <ClInclude Include="ryu\common.h" />
+    <ClInclude Include="ryu\d2fixed_full_table.h" />
+    <ClInclude Include="ryu\d2s_full_table.h" />
+    <ClInclude Include="ryu\d2s_intrinsics.h" />
+    <ClInclude Include="ryu\d2s_small_table.h" />
+    <ClInclude Include="ryu\digit_table.h" />
+    <ClInclude Include="ryu\ryu.h" />
     <ClInclude Include="scanner.h" />
     <ClInclude Include="table.h" />
     <ClInclude Include="value.h" />
